# YokaiEval

./: .env.example  .gitignore  Dockerfile  LICENSE  README-ja.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/: human_eval.json  jfolktales_datasets.csv  jfolktales_datasets_en.csv
prompts/: judge_prompt.txt  prompt_template.txt
results/: calm2-7b-chat.json  eurollm-9b-instruct.json  gemma-2-27b-it.json  gpt4o-mini.json  gpt4o.json  llama-3-swallow-70b-instruct-v0.1.json  llama-3-swallow-8b-instruct-v0.1.json  llama-3.1-swallow-70b-instruct-v0.1.json  llama-3.1-swallow-8b-instruct-v0.1.json  llama-3.1-swallow-8b-instruct-v0.2.json  llama-3.1-swallow-8b-instruct-v0.3.json  llama-3.2-3b-instruct.json  llm-jp-13b-instruct-full-jaster-v1.0.json  llm-jp-3-1.8b-instruct.json  llm-jp-3-13b-insturct.json  llm-jp-3-3.7b-instruct.json  llmjp-chatbotarena-dpo.json  meta-llama-3.1-8b-instruct.json  meta-llama-3.3-70b-instruct.json  mistral-nemo-instruct-2407.json  qwen2-7b-instruction.json  qwen2.5-3b-instruct.json  qwen2.5-7b-instruct.json
src/: check_verify_question.py  eval.py  generate_datasets.py  get_yokai_info.py  gpt.py  judge.py  llm_functions.py  prompt.py  question.py  visualize_result.py
src/models/: common.py
works/: YokaiEval-en.csv  YokaiEval.json  merged_mt_bench.csv  mt-bench.csv  scores-acurency.csv  scores-result.csv
